add endpoints to docs
